<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Andromeda</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="title_activity_select_product">SelectProductActivity</string>
    <string name="title_activity_planet">PlanetActivity</string>
    <string name="title_activity_open_gles20">OpenGLES20Activity</string>
    <string name="title_activity_planets">Planets</string>
    <string name="title_activity_tech">TechActivity</string>
    <string name="action_game">Game</string>
    <string name="action_colonies">Colonies</string>
    <string name="action_planets">Planets</string>
    <string name="action_races">Races</string>
    <string name="action_tech">Tech</string>
    <string name="action_next">Next</string>
    <string name="planetName">Planet Name</string>
    <string name="title_activity_fleet">FleetActivity</string>

</resources>
